--- a/content/qed-effects.tex
+++ b/content/qed-effects.tex
@@ -1,10 +1,12 @@
 \chapter{Effects of Ultraviolet Divergences}
 
+\section{Emission Lines and Fermi's Golden Rule}
+\label{sec:second-quantization}
+
+
 \section{Electron Mass and Charge renormalization}
 \section{Photon Self Energy}
-\section{Electron Anomalous Magnetic Moment}
 \section{Compton Scattering}
 \section{Positronium Decay}
-\section{Scattering to Hydrogen}
 \section{Lamb Shift}
-\section{(Other Hyperfine examples)}
+\section{Scattering to Hydrogen}
