--- a/content/spin-0.5.tex
+++ b/content/spin-0.5.tex
@@ -343,7 +343,7 @@ We'll represent the scalar $\phi$ particle as a dashed line and the fermion $\ps
     a -- [scalar] b,
   };
 \end{center}
-and contributes a factor of $-ig$ to the amplitude.
+and contributes a factor of $-ig$ to the amplitude. You might remember this vertex from the previous section on scalar fields, but that vertex was a scalar-scalar interaction and this Yukawa interaction is a scalar-fermion interaction.
 
 In this section, we'll assume a massive scalar: $m_\phi \gg m_\psi$. Intuitively, we know that having a massive scalar implies that the decay of one $\phi$ particle to two (or more) $\psi$ particles is energetically possible. The rest of this section studies this decay.
 
