--- a/content/uv-divergences.tex
+++ b/content/uv-divergences.tex
@@ -1,8 +1,15 @@
-\chapter{Ultraviolet divergences}
-\label{chap:qed}
+\chapter{Renormalization}
+\label{chap:renormalization}
 
-\section{Wilsonian Renormalization}
+\section{Magnetic Moment of the Electron}
 
-\section{On-Shell Renormalization}
+\section{Photon self-energy?}
+\label{sec:mass-shift}
+
+\section{Electronic Scattering}
 
 \section{Dimensional Regularization}
+
+\begin{problem}[Mass shift of a scalar boson]
+  In section \ref{sec:scalar-mass} we began a calculation for the mass shift of a massless scalar boson but could not complete it because we lacked the tools. Use the techniques of section \ref{sec:mass-shift} to compute the mass shift of the $\chi$ particle under the theory used in section \ref{sec:scalar-mass} to first loop order.
+\end{problem}
